--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html dir="ltr" lang="en-GB">
   <head>
     <meta charset="UTF-8" />
-    <title>Allegiant and The Accessibility Challenge</title>
+    <title>Review | Allegiant Air</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
