--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Review | Allegiant Air</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h2>Review your trip</h2>
@@ -17,7 +17,7 @@
         <span class="star-2">&#x2605;</span>
         <span class="star-3">&#x2605;</span>
         <span class="star-4">&#x2605;</span>
-        <span class="star-5>&#x2605;</span>
+        <span class="star-5">&#x2605;</span>
       </div>
       <a class="button">Submit review ></a>
     </div>
