href on "button"

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span class="star-4">&#x2605;</span>
         <span class="star-5">&#x2605;</span>
       </div>
-      <a class="button">Submit review ></a>
+      <a class="button" href="#">Submit review ></a>
     </div>
   </body>
 </html>
