--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
       </div>
       <a class="button" href="#">Submit review ></a>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   </body>
 </html>
