Initial script layout

--- a/index.html
+++ b/index.html
@@ -22,5 +22,12 @@
       <a class="button" href="#">Submit review ></a>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    $('[class^="star-"]').on('click', function() {
+      var index = $(this).index();
+      var parent = $(this).parent('stars');
+      for (var i = 0; i <= index; i++) {
+        
+      }
+    });
   </body>
 </html>
