--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           $('.form').remove();
           $('<div class="submitted">Thank you for your review!</div>').insertAfter('h2');
         }
+        return false;
       });
     </script>
   </body>
