--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           $('.form').remove();
           $('<div class="submitted">Thank you for your review!</div>').insertAfter('h2');
         } else {
-          return;
+          break;
         }
         return false;
       });
