--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en-GB">
+<html>
   <head>
     <meta charset="UTF-8" />
     <title>Review | Allegiant Air</title>
