change thank you message

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         }
         if (window.clean) {
           $('.form').remove();
-          $('<div class="submitted">Thank you for your review!</div>').insertAfter('h2');
+          $('<div class="submitted">Thank you!</div>').insertAfter('h2');
         } else {
           
         }
