--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         $(this).siblings().removeClass('selected');
         $(this).addClass('selected');
         $(this).prevAll().addClass('selected');
-        $('.you-rated').text('You rated '+$(this).index()+1+' stars');
+        var index = $(this).index() + 1;
+        $('.you-rated').text('You rated '+index+' stars');
       });
       $('.button').on('click', function() {
         if ($('#comments').is(':empty')) {
